Align bug fix

--- a/src/app/styles/Sbc.module.css
+++ b/src/app/styles/Sbc.module.css
@@ -2,10 +2,20 @@
 .container {
   width: 100%;
   display: grid;
-  justify-content: flex-start;
+  justify-content: start;
   place-items: center;
   grid-template-rows: 1fr;
   padding-bottom: 50px;
+}
+@media (max-width: 1280px) {
+  .container {
+    justify-content: center;
+  }
+}
+@media (min-width: 1680px) {
+  .container {
+    padding-left: 150px;
+  }
 }
 .companyCard {
   display: flex;
